# ClipToEpub

./: .cursorignore  .gitignore  README.md  USER_MANUAL.md  VERIFICACION.md  build_app_fixed.sh  build_complete.sh  build_dmg.sh  constraints.txt  content_processor.py  create_app_bundle.sh  pyproject.toml  requirements.txt  run.sh  run_menubar.sh  run_tray_windows.bat  setup.py  setup.sh
.github/workflows/: ci.yml
build scripts/: file_version.txt  pyinstaller_onefile.spec  pyinstaller_onefolder.spec  pyinstaller_tray_windows.spec
resources/: icon.icns
src/: clipboard_to_epub.py  clipboard_to_epub_v2.py  clipboard_to_epub_v3.py  clipboard_to_epub_v4.py  config_window.py  config_window_qt.py  converter.py  edit_window.py  history_manager.py  image_handler.py  imp_patch.py  llm_anthropic.py  menubar_app.py  paths.py  tray_app_windows.py  update_checker.py
src/cliptoepub/: __init__.py  config_window.py  config_window_qt.py  content_processor.py  converter.py  edit_window.py  errors.py  history_manager.py  hotkeys.py  image_handler.py  imp_patch.py  llm_anthropic.py  llm_config.py  menubar_app.py  tray_app_windows.py  update_checker.py
src/cliptoepub/llm/: anthropic.py  base.py  openrouter.py
templates/: default.css  minimal.css  modern.css
tests/: conftest.py  test_content_processor.py  test_llm_config.py
